force-app/main/default/objects/GRN_Line__c/GRN_Line__c.object-meta.xml
<CustomObject>
    <label>GRN Line</label>
    <pluralLabel>GRN Lines</pluralLabel>
    <nameField>
        <label>GRN Line Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Line items for Goods Receipt Notes containing product-level receipt details including quantities and batch information</description>
</CustomObject>