force-app/main/default/objects/GRN_Line__c/fields/Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Batch_No__c</fullName>
    <label>Batch No</label>
    <type>Text</type>
    <length>100</length>
</CustomField>