force-app/main/default/objects/GRN_Line__c/fields/Damaged_Qty__c.field-meta.xml
<CustomField>
    <fullName>Damaged_Qty__c</fullName>
    <label>Damaged Qty</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>