force-app/main/default/objects/GRN_Line__c/fields/Dispatched_Qty__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_Qty__c</fullName>
    <label>Dispatched Qty</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>