force-app/main/default/objects/GRN_Line__c/fields/GRN__c.field-meta.xml
<CustomField>
    <fullName>GRN__c</fullName>
    <label>GRN</label>
    <type>MasterDetail</type>
    <referenceTo>GRN__c</referenceTo>
    <relationshipLabel>GRN Lines</relationshipLabel>
    <relationshipName>GRN_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>