force-app/main/default/objects/GRN_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>GRN Lines</relationshipLabel>
    <relationshipName>GRN_Lines</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>